--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Hello</a></li>
                 <li><a href="#pftr">Please Fix The Road</a></li>
                 <li><a href="https://drive.google.com/file/d/1P3BD1_lcjaRREhS8n2IP133m76HmTHWK/view" target="_blank">Press Kit</a></li>
 				<li><a href="mailto:PleaseFixTheRoad@gmail.com"><i class="scaled-icon fa fa-envelope"></i></a></li>
-				<li><a href="#"><i class="scaled-icon fa fa-twitter"></i></a></li>
+				<li><a href="https://twitter.com/ArielJurkowski" target="_blank"><i class="scaled-icon fa fa-twitter"></i></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
