--- a/index.html
+++ b/index.html
@@ -151,7 +151,27 @@
                 <center>
                 
             </div></div><!-- end row -->
-
+			
+			<div class="fancy dark"><span></span></div>
+			<center>
+			<br>
+			<div class="articles">
+			<h4><b>Polygon</b></h4>
+			<div><a href="https://www.polygon.com/22976904/puzzle-sonic-survival-game-game-development">"Fix roads and untangle waterways in this chill, gorgeous puzzler"</a></div>
+			<br>
+			<h4><b>PCGAMER</b></h4>
+			<div><a href="https://www.pcgamer.com/indie-dev-is-releasing-an-official-pirate-version-of-his-upcoming-game-no-strings-attached/">"Indie dev is releasing an official pirate version of his upcoming game, 'no strings attached'"</a></div>
+			<br>
+			<h4><b>VG247</b></h4>
+			<div><a href="https://www.vg247.com/please-fix-the-road-indie-game-special-pirate-torrent-version">"Pirates added to pirate-less indie game as a treat for pirates"</a></div>
+			<br>
+			<h4><b>Automaton Media (Japanese)</b></h4>
+			<div><a href="https://automaton-media.com/articles/newsjp/20220510-201796/">"とある開発者、新作ゲームの“公式海賊版”を発売日より配信すると発表。ただしタダより高いものはない"</a></div>
+			<br>
+			<h4><b>Gry Online (Polish)</b></h4>
+			<div><a href="https://www.gry-online.pl/newsroom/polskie-please-fix-the-road-wyjdzie-od-razu-na-torrentach/zd21d42">"Śliczne polskie Please Fix the Road wyjdzie od razu na torrentach"</a></div>
+			</div>
+			</center>
         </div><!-- end container -->
     </section>
 
