--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ariel Jurkowski</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="ariel, jurkowski, please, fix, the, road, pftr">
+    <meta name="description" content="Official website of Ariel Jurkowski, game developer. I made Please Fix The Road.">
+	<link rel="canonical" href="https://arielek.com/" />
+	<meta name=”robots” content=”index, follow”>
+    <meta name="keywords" content="ariel, jurkowski, please, fix, the, road, pftr, video, games, steam, gog, itch">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta name="twitter:title" content="Ariel Jurkowski">
+	<meta name="twitter:description" content="Official website of Ariel Jurkowski, game developer. I made Please Fix The Road.">
+	<meta name="twitter:image" content="https://arielek.com/img/twitter-card.jpg">
+	<meta name="twitter:site" content="@ArielJurkowski">
+	<meta name="twitter:creator" content="@ArielJurkowski">
+	
+	<meta property="og:title" content="Arielek.com">
+	<meta property="og:site_name" content="Ariel Jurkowski">
+	<meta property="og:url" content="https://arielek.com">
+	<meta property="og:description" content="Official website of Ariel Jurkowski, game developer. I made Please Fix The Road.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://arielek.com/img/twitter-card.jpg">
     
     <!-- Favicons
     ================================================== -->
