--- a/index.html
+++ b/index.html
@@ -180,11 +180,14 @@
 			<h4><b>VG247</b></h4>
 			<div><a href="https://www.vg247.com/please-fix-the-road-indie-game-special-pirate-torrent-version">"Pirates added to pirate-less indie game as a treat for pirates"</a></div>
 			<br>
-			<h4><b>Automaton Media (Japanese)</b></h4>
-			<div><a href="https://automaton-media.com/articles/newsjp/20220510-201796/">"とある開発者、新作ゲームの“公式海賊版”を発売日より配信すると発表。ただしタダより高いものはない"</a></div>
+			<h4><b>IGN Polska (Polish)</b></h4>
+			<div><a href="https://pl.ign.com/please-fix-the-road/49291/news/polska-gra-logiczna-please-fix-the-road-ukaze-sie-na-premiere-takze-na-torrentach">"Polska gra logiczna Please Fix The Road ukaże się na premierę także na torrentach"</a></div>
 			<br>
 			<h4><b>Gry Online (Polish)</b></h4>
 			<div><a href="https://www.gry-online.pl/newsroom/polskie-please-fix-the-road-wyjdzie-od-razu-na-torrentach/zd21d42">"Śliczne polskie Please Fix the Road wyjdzie od razu na torrentach"</a></div>
+			<br>
+			<h4><b>Automaton Media (Japanese)</b></h4>
+			<div><a href="https://automaton-media.com/articles/newsjp/20220510-201796/">"とある開発者、新作ゲームの“公式海賊版”を発売日より配信すると発表。ただしタダより高いものはない"</a></div>
 			</div>
 			</center>
         </div><!-- end container -->
