--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<h4><b>VG247</b></h4>
 			<div><a href="https://www.vg247.com/please-fix-the-road-indie-game-special-pirate-torrent-version">"Pirates added to pirate-less indie game as a treat for pirates"</a></div>
 			<br>
-			<h4><b>IGN Polska (Polish)</b></h4>
+			<h4><b>IGN (Polish)</b></h4>
 			<div><a href="https://pl.ign.com/please-fix-the-road/49291/news/polska-gra-logiczna-please-fix-the-road-ukaze-sie-na-premiere-takze-na-torrentach">"Polska gra logiczna Please Fix The Road ukaże się na premierę także na torrentach"</a></div>
 			<br>
 			<h4><b>Gry Online (Polish)</b></h4>
