--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta name="google-site-verification" content="7SNd4BzjDm_4gbOueeemxcCLMFMQ9_3NKqOC9fkA_yU" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
