--- a/PFTR-Steam/index.html
+++ b/PFTR-Steam/index.html
@@ -1,1 +1,17 @@
-<meta http-equiv="refresh" content="0; URL='https://store.steampowered.com/app/1383250/Please_Fix_The_Road/'" />
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<link rel="canonical" href="https://store.steampowered.com/app/1383250/Please_Fix_The_Road/"/>
+    <meta charset="UTF-8">
+	<meta http-equiv="refresh" content="0;url=https://store.steampowered.com/app/1383250/Please_Fix_The_Road/">
+	<script language="javascript">
+		window.location.href = "https://store.steampowered.com/app/1383250/Please_Fix_The_Road/"
+	</script>
+    <title>Please Fix The Road on Steam</title>
+</head>
+<body style="background-color: #222">
+<center>
+<br><br><br><br><br><br>
+<h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://store.steampowered.com/app/1383250/Please_Fix_The_Road/'>link to site</a>.</h1>
+</center>
+</body>
