--- a/PFTR-GOG/index.html
+++ b/PFTR-GOG/index.html
@@ -1,1 +1,17 @@
-<meta http-equiv="refresh" content="0; URL='https://www.gog.com/game/please_fix_the_road'" />
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<link rel="canonical" href="https://www.gog.com/game/please_fix_the_road"/>
+    <meta charset="UTF-8">
+	<meta http-equiv="refresh" content="0;url=https://www.gog.com/game/please_fix_the_road">
+	<script language="javascript">
+		window.location.href = "https://www.gog.com/game/please_fix_the_road"
+	</script>
+    <title>Please Fix The Road on GOG</title>
+</head>
+<body style="background-color: #222">
+<center>
+<br><br><br><br><br><br>
+<h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://www.gog.com/game/please_fix_the_road'>link to site</a>.</h1>
+</center>
+</body>
