--- a/PFTR-ITCH/index.html
+++ b/PFTR-ITCH/index.html
@@ -1,1 +1,17 @@
-<meta http-equiv="refresh" content="0; URL='https://arieljurkowski.itch.io/please-fix-the-road'" />
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<link rel="canonical" href="https://arieljurkowski.itch.io/please-fix-the-road"/>
+    <meta charset="UTF-8">
+	<meta http-equiv="refresh" content="0;url=https://arieljurkowski.itch.io/please-fix-the-road">
+	<script language="javascript">
+		window.location.href = "https://arieljurkowski.itch.io/please-fix-the-road"
+	</script>
+    <title>Please Fix The Road on GOG</title>
+</head>
+<body style="background-color: #222">
+<center>
+<br><br><br><br><br><br>
+<h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://arieljurkowski.itch.io/please-fix-the-road'>link to site</a>.</h1>
+</center>
+</body>
