--- a/404.html
+++ b/404.html
@@ -9,7 +9,8 @@
 		{ match: "pftr", link: "https://arielek.com/#please-fix-the-road" },
 		
 		{ match: "steam", link: "https://store.steampowered.com/dev/ARIELEK" },
-		{ match: "twitter", link: "https://twitter.com/ArielJurkowski" }
+		{ match: "twitter", link: "https://twitter.com/ArielJurkowski" },
+		{ match: "youtube", link: "https://www.youtube.com/channel/UC5Rk393KJGJAc_9olW3g3iA" }
 	];
 	
 	let path = window.location.pathname.toLowerCase();
