--- a/PFTR-GOG/index.html
+++ b/PFTR-GOG/index.html
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://www.gog.com/game/please_fix_the_road'>link to site</a>.</h1>
 </center>
 </body>
+</html>
