--- a/TWITTER/index.html
+++ b/TWITTER/index.html
@@ -7,7 +7,7 @@
 	<script language="javascript">
 		window.location.href = "https://twitter.com/ArielJurkowski"
 	</script>
-    <title>Please Fix The Road</title>
+    <title>Twitter / X</title>
 </head>
 <body style="background-color: #222">
 <center>
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://twitter.com/ArielJurkowski'>link to site</a>.</h1>
 </center>
 </body>
+</html>
