--- a/DISCORD/index.html
+++ b/DISCORD/index.html
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://discord.gg/wcDA7SkQUk'>link to site</a>.</h1>
 </center>
 </body>
+</html>
