--- a/PFTR-ITCH/index.html
+++ b/PFTR-ITCH/index.html
@@ -7,7 +7,7 @@
 	<script language="javascript">
 		window.location.href = "https://arieljurkowski.itch.io/please-fix-the-road"
 	</script>
-    <title>Please Fix The Road on GOG</title>
+    <title>Please Fix The Road on Itch</title>
 </head>
 <body style="background-color: #222">
 <center>
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://arieljurkowski.itch.io/please-fix-the-road'>link to site</a>.</h1>
 </center>
 </body>
+</html>
