--- a/PFTR-Steam/index.html
+++ b/PFTR-Steam/index.html
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://store.steampowered.com/app/1383250/Please_Fix_The_Road/'>link to site</a>.</h1>
 </center>
 </body>
+</html>
