--- a/PLEASE/index.html
+++ b/PLEASE/index.html
@@ -15,3 +15,4 @@
 <h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://arielek.com/#please-fix-the-road'>link to site</a>.</h1>
 </center>
 </body>
+</html>
