Better 404, removed old stuff

--- a/404.html
+++ b/404.html
@@ -2,15 +2,17 @@
 	
 	const redirects = [ 
 		{ match: "discord", link: "https://discord.gg/wcDA7SkQUk" },
-		
+		{ match: "twitter", link: "https://twitter.com/ArielJurkowski" },
+		{ match: "youtube", link: "https://www.youtube.com/channel/UC5Rk393KJGJAc_9olW3g3iA" },
+	
 		{ match: "pftr-steam", link: "https://store.steampowered.com/app/1383250/Please_Fix_The_Road/" },
 		{ match: "pftr-gog", link: "https://www.gog.com/game/please_fix_the_road" },
 		{ match: "pftr-itch", link: "https://arieljurkowski.itch.io/please-fix-the-road" },
 		{ match: "pftr", link: "https://arielek.com/#please-fix-the-road" },
+		{ match: "please", link: "https://arielek.com/#please-fix-the-road" },
 		
 		{ match: "steam", link: "https://store.steampowered.com/dev/ARIELEK" },
-		{ match: "twitter", link: "https://twitter.com/ArielJurkowski" },
-		{ match: "youtube", link: "https://www.youtube.com/channel/UC5Rk393KJGJAc_9olW3g3iA" }
+		{ match: "x", link: "https://twitter.com/ArielJurkowski" }
 	];
 	
 	let path = window.location.pathname.toLowerCase();
