New discord link

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <script>
 	
 	const redirects = [ 
-		{ match: "discord", link: "https://discord.gg/wcDA7SkQUk" },
+		{ match: "discord", link: "https://discord.com/invite/HVt5UeyZrX" },
 		{ match: "twitter", link: "https://twitter.com/ArielJurkowski" },
 		{ match: "youtube", link: "https://www.youtube.com/channel/UC5Rk393KJGJAc_9olW3g3iA" },
 	
