--- a/discord/index.html
+++ b/discord/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<link rel="canonical" href="https://discord.gg/wcDA7SkQUk"/>
+	<link rel="canonical" href="https://discord.com/invite/HVt5UeyZrX"/>
     <meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0;url=https://discord.gg/wcDA7SkQUk">
+	<meta http-equiv="refresh" content="0;url=https://discord.com/invite/HVt5UeyZrX">
 	<script language="javascript">
-		window.location.href = "https://discord.gg/wcDA7SkQUk"
+		window.location.href = "https://discord.com/invite/HVt5UeyZrX"
 	</script>
     <title>Discord</title>
 </head>
 <body style="background-color: #222">
 <center>
 <br><br><br><br><br><br>
-<h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://discord.gg/wcDA7SkQUk'>link to site</a>.</h1>
+<h1 style="color: #EEE">If you are not redirected automatically follow the <a href='https://discord.com/invite/HVt5UeyZrX'>link to site</a>.</h1>
 </center>
 </body>
 </html>
