New press kit, dev server

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			</a>
 		</div>
 		<div class="nav-right">
-			<a class="press-kit-link" href="https://drive.google.com/file/d/1P3BD1_lcjaRREhS8n2IP133m76HmTHWK/view" target="_blank">
+			<a class="press-kit-link" href="./Please Fix The Road PRESS KIT.zip" download="Please Fix The Road PRESS KIT.zip">
 				<div>PRESS KIT</div>
 			</a>
 			
