--- a/404.html
+++ b/404.html
@@ -8,6 +8,10 @@
 		{ match: "pftr-steam", link: "https://store.steampowered.com/app/1383250/Please_Fix_The_Road/" },
 		{ match: "pftr-gog", link: "https://www.gog.com/game/please_fix_the_road" },
 		{ match: "pftr-itch", link: "https://arieljurkowski.itch.io/please-fix-the-road" },
+		{ match: "pftr-switch", link: "https://www.nintendo.com/us/store/products/please-fix-the-road-switch/" },
+		{ match: "pftr-xbox", link: "https://www.xbox.com/en-US/games/store/please-fix-the-road/9npwtqhjlh64" },
+		{ match: "pftr-ps", link: "https://store.playstation.com/en-us/concept/10009773" },
+		
 		{ match: "pftr", link: "https://arielek.com/#please-fix-the-road" },
 		{ match: "please", link: "https://arielek.com/#please-fix-the-road" },
 		
