OG Avatar was missing!

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<meta name="google-site-verification" content="7SNd4BzjDm_4gbOueeemxcCLMFMQ9_3NKqOC9fkA_yU" />
 	
+	<title>ARIELEK • Games by Ariel Jurkowski</title>
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
-
-    <title>ARIELEK • Games by Ariel Jurkowski</title>
+    
     <meta name="description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
 	<link rel="canonical" href="https://arielek.com/">
 	<meta name="”robots”" content="”index" follow”="">
-    <meta name="keywords" content="arielek, please, fix, the, road, pftr, param, party, ariel, jurkowski, video, games, steam, gog, pc, console, gry">
+    <meta name="keywords" content="arielek, please, fix, the, road, pftr, ariel, jurkowski, video, games, steam, gog, pc, switch, xbox, series, one, playstation, console, gry">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon.png">
@@ -25,19 +26,20 @@
 
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="photoswipe/photoswipe.css">
-
-	<meta name="twitter:title" content="ARIELEK">
-	<meta name="twitter:description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
-	<meta name="twitter:image" content="https://arielek.com/img/twitter-card.jpg">
+	
+	<meta property="og:title" name="twitter:title" content="ARIELEK • Games by Ariel Jurkowski">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://ARIELEK.com">
+	<meta property="og:description" name="twitter:description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
+	<meta property="og:site" content="ARIELEK.com">
+	<meta property="og:image" content="https://arielek.com/img/avatar.jpg">
+	
 	<meta name="twitter:site" content="@ArielJurkowski">
 	<meta name="twitter:creator" content="@ArielJurkowski">
-
-	<meta property="og:title" content="ARIELEK">
-	<meta property="og:site_name" content="ARIELEK">
-	<meta property="og:url" content="https://arielek.com">
-	<meta property="og:description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
-	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://arielek.com/img/twitter-card.jpg">
+	<meta name="twitter:image" content="https://arielek.com/img/avatar.jpg">
+	<meta name="twitter:card" content="summary">
+	
+	
 
 </head>
 <body>
