--- a/index.html
+++ b/index.html
@@ -152,12 +152,16 @@
 <section class="games-section section-padding">
 	<div class="mask mask-mini"></div>
 	<div class="games">
-		<div class="game">
+		<div class="game" style="display: none">
 			<div class="img-shine wip"><img src="assets/param/box.jpg" alt="Param Party Boxart"></div>
 			<strong class="game-title">Param Party</strong>
 			<p class="game-desc">Funny, cheeky and mischievous couch and online co-op party game for 2-8 players.</p>
 		</div>
-		
+		<div class="game">
+			<div class="img-shine wip"><img src="assets/number_machine/box.jpg" alt="Number Machine Boxart"></div>
+			<strong class="game-title">Number Machine</strong>
+			<p class="game-desc">Open-ended automation puzzle game where you manipulate and build with numbers. The nerdiest game ever.</p>
+		</div>
 		<div class="game">
 			<a href="#please-fix-the-road"  class="img-shine"><img src="assets/please/box.jpg" alt="Please Fix The Road Boxart" aria-label="Scroll down to Please Fix The Road section"></a>
 			<strong>Please Fix The Road</strong>
