I hope this fixes the description on Google :(

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
     
-    <meta name="description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
+    <meta name="description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.">
 	<link rel="canonical" href="https://arielek.com/">
-	<meta name="”robots”" content="”index" follow”="">
-    <meta name="keywords" content="arielek, please, fix, the, road, pftr, ariel, jurkowski, video, games, steam, gog, pc, switch, xbox, series, one, playstation, console, gry">
+	
+
+	
+    <meta name="keywords" content="arielek, please, fix, the, road, pftr, ariel, jurkowski, video, games, steam, gog, pc, nintendo, switch, xbox, series, one, playstation, ps, console, gry, please fix the road">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon.png">
@@ -30,7 +32,7 @@
 	<meta property="og:title" name="twitter:title" content="ARIELEK • Games by Ariel Jurkowski">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ARIELEK.com">
-	<meta property="og:description" name="twitter:description" content="Solo game developer from Poland focused on creating PC and CONSOLE games.">
+	<meta property="og:description" name="twitter:description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.">
 	<meta property="og:site" content="ARIELEK.com">
 	<meta property="og:image" content="https://arielek.com/img/avatar.jpg">
 	
@@ -99,9 +101,12 @@
 </nav>
 
 <section class="hero">
-	<div class="hero-video" id="hero-video">
 
-	</div>
+	<h1 class="hero-title-for-robots-only-because-googles-description-is-wrong">
+		<strong>Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.</strong>
+	</h1>
+
+	<div class="hero-video" id="hero-video"></div>
 	
 	<div class="hero-body">
 		<div class="hero-content">
