--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
     
-    <meta name="description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.">
+    <meta name="description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road, working on Number Machine.">
 	<link rel="canonical" href="https://arielek.com/">
 	
-
-	
-    <meta name="keywords" content="arielek, please, fix, the, road, pftr, ariel, jurkowski, video, games, steam, gog, pc, nintendo, switch, xbox, series, one, playstation, ps, console, gry, please fix the road">
+    <meta name="keywords" content="arielek, please, fix, the, road, pftr, ariel, jurkowski, number, machine, machines, video, games, steam, gog, pc, nintendo, switch, xbox, series, one, playstation, ps, console, gry, please fix the road">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon.png">
@@ -32,13 +30,13 @@
 	<meta property="og:title" name="twitter:title" content="ARIELEK • Games by Ariel Jurkowski">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ARIELEK.com">
-	<meta property="og:description" name="twitter:description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.">
+	<meta property="og:description" name="twitter:description" content="Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road, working on Number Machine.">
 	<meta property="og:site" content="ARIELEK.com">
-	<meta property="og:image" content="https://arielek.com/img/avatar.jpg">
+	<meta property="og:image" content="https://arielek.com/assets/arielek-logo-1024.jpg">
 	
 	<meta name="twitter:site" content="@ArielJurkowski">
 	<meta name="twitter:creator" content="@ArielJurkowski">
-	<meta name="twitter:image" content="https://arielek.com/img/avatar.jpg">
+	<meta name="twitter:image" content="https://arielek.com/assets/arielek-logo-1024.jpg">
 	<meta name="twitter:card" content="summary">
 	
 	
@@ -103,7 +101,8 @@
 <section class="hero">
 
 	<h1 class="hero-title-for-robots-only-because-googles-description-is-wrong">
-		<strong>Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road.</strong>
+		<img src="assets/arielek-logo-1024.jpg" alt="ARIELEK Logo">
+		<strong>Official website of ARIELEK (Ariel Jurkowski), a solo game developer from Poland focused on creating PC and CONSOLE games. Creator of Please Fix The Road, working on Number Machine.</strong>
 	</h1>
 
 	<div class="hero-video" id="hero-video"></div>
@@ -157,16 +156,13 @@
 <section class="games-section section-padding">
 	<div class="mask mask-mini"></div>
 	<div class="games">
-		<div class="game" style="display: none">
-			<div class="img-shine wip"><img src="assets/param/box.jpg" alt="Param Party Boxart"></div>
-			<strong class="game-title">Param Party</strong>
-			<p class="game-desc">Funny, cheeky and mischievous couch and online co-op party game for 2-8 players.</p>
-		</div>
+
 		<div class="game">
 			<div class="img-shine wip"><img src="assets/number_machine/box.jpg" alt="Number Machine Boxart"></div>
 			<strong class="game-title">Number Machine</strong>
 			<p class="game-desc">Open-ended automation puzzle game where you manipulate and build with numbers. The nerdiest game ever.</p>
 		</div>
+		
 		<div class="game">
 			<a href="#please-fix-the-road"  class="img-shine"><img src="assets/please/box.jpg" alt="Please Fix The Road Boxart" aria-label="Scroll down to Please Fix The Road section"></a>
 			<strong>Please Fix The Road</strong>
